<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/blue_global" >

    <LinearLayout
        android:id="@+id/ll_login_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/img_login_top"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:layout_margin="50dp"
            android:src="@drawable/ic_launcher"
            android:scaleType="fitXY" />
        <EditText
            android:id="@+id/edt_login_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:singleLine="true"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_edt_login_email"
            android:background="@color/white_global"
            android:textColorHint="@color/gray_global"
            android:textSize="@dimen/text_global_normal"
            android:layout_marginBottom="15dp" />
        <EditText
            android:id="@+id/edt_login_pass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:singleLine="true"
            android:padding="5dp"
            android:inputType="textPassword"
            android:hint="@string/hint_edt_login_pass"
            android:background="@color/white_global"
            android:textColorHint="@color/gray_global"
            android:textSize="@dimen/text_global_normal"
            android:layout_marginBottom="15dp" />
        <Button
            android:id="@+id/bt_login_enter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white_global"
            android:text="@string/label_login_enter"
            android:textColor="@color/blue_global"
            android:textAllCaps="true"
            android:textSize="@dimen/text_global_normal"
            android:layout_marginBottom="25dp" />
    </LinearLayout>

</RelativeLayout>
